# Crisis_Gaurd

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  collect_trajectories.py  environment.py  firestore.rules  inference.py  package-lock.json  package.json  pyproject.toml  schemas.py  studio.json  test_scores.py  train_rl.py
.agents/rules/: migration-context.md
.agents/workflows/: build_project.md  preview_project.md
.github/workflows/: python-app.yml
docs/: REWARD_SHAPING.md  backend.json  blueprint.md  presentation-guide.md
server/: CrisisGuard_OpenEnv_Baseline_Evaluation.ipynb  Dockerfile  README.md  __init__.py  app.py  environment.py  inference.py  openenv.yaml  tasks.py
src/ai/: dev.ts
src/ai/flows/: improve-threat-detection.ts  summarize-risk-factors.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AlertHistory.tsx  AnalysisPanel.tsx  AnalyticsView.tsx  CrisisGuardSidebar.tsx  GoogleTranslate.tsx  LandingPage.tsx  LiveThreatMap.tsx  LoginOverlay.tsx  RiskMeter.tsx  SettingsView.tsx  ThemeToggle.tsx
src/components/ui/: calendar.tsx  sidebar.tsx
src/firebase/: config.ts
src/lib/: app-data.json  detection-constants.ts  sample-cases.json
